# airflow-astro-sandbox

./: Dockerfile  Dockerfile-spark-included  README.md  docker-compose.override.yml  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: merra_etl.py  spark.py  spark_submit.py
include/: hello.py
